2003-12-11  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/mod_skunkweb/mod_skunkweb.c (critical_error): apache2
	bugfix: wrong test for return value of apr_file_open().

2003-11-30  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* SkunkWeb/Services/sessionHandler/SQLSessionStore.py
	(AbstractSQLSessionStore.getConnection): bug fix for the
	postgresql implementation -- attempting to call fetchall on a
	cursor when there are no rows is not tolerated by pypgsql.

2003-11-29  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* SkunkWeb/mod_skunkweb/mod_skunkweb.c: replace references to AE
	and AED with SkunkWeb.

	* SkunkWeb/Services/sessionHandler/PostgreSQLSessionStore.py:
	several changes so it actually works (previous version did not).

	* SkunkWeb/Services/sessionHandler/SQLSessionStore.py
	(AbstractSQLSessionStore._getPickle): fix for bytea using
	pypgsql. 

2003-11-24  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* pylibs/PyDO/PyDO2.py (_metapydo.__new__): looping through
	<dict>.iteritems() and mutating the dict can lead to hash
	rearrangement, apparently; patch from Jeroen van Dongen (no longer
	use iteritems, which was pointless anyway).

2003-11-22  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* SkunkWeb/Services/httpd/protocol.py
	(HTTPProtocol.marshalResponse): bug fix that permits httpd to send
	multiple headers with the same name (as in Set-Cookie).  Thanks to
	Dan Chow for reporting this.

2003-11-17  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* SkunkWeb/Services/product/loader.py (Product.__reallyload): when
	using Python 2.3 or better, using zipimport if the product is a 
	zip file.

2003-10-20 Brian Olsen <brian@qinternet.com>

	* pylibs/PyDO/PyDO.py: Added "order", "limit", and "offset"
	parameters to getSome(), getSomeSQL(), getTupleWhere() and
	getSQLWhere(); they are used to use the respective SQL 
	commands "ORDER BY", "LIMIT" and "OFFSET."

	* pylibs/PyDO/PyDO2.py: Added "order", "limit" and "offset"